--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,23 @@
 {
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "package-lock.json": true,
+    "src/types/smartcheck-api.d.ts": true
+  },
   "eslint.validate": [
     "javascript",
     "javascriptreact",
     { "language": "typescript", "autoFix": true }
   ],
-  "eslint.autoFixOnSave": true
+  "eslint.autoFixOnSave": true,
+  "cSpell.words": [
+    "deepsecurity",
+    "dssc",
+    "execa",
+    "microbundle",
+    "preregistry",
+    "smartcheck",
+    "userid"
+  ]
 }
