--- a/package.json
+++ b/package.json
@@ -3,28 +3,40 @@
   "version": "1.0.0",
   "private": true,
   "license": "Apache-2.0",
+  "main": "build/index.js",
   "scripts": {
     "checkFormat": "prettier --list-different '**/*.{js,jsx,ts,tsx,html,vue,css,less,scss,graphql,yaml,yml,json,md,mdx}' ",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,html,vue,css,less,scss,graphql,yaml,yml,json,md,mdx}' ",
     "lint": "eslint --ext .js,.ts .",
-    "build": "rm -rf build/ && tsc -b tsconfig.json",
-    "dev": "ts-node --files index.ts"
+    "test": "jest",
+    "build": "microbundle build --strict --target node --format cjs",
+    "dev": "ts-node -O '{\"module\": \"commonjs\"}' --files src/index.ts"
   },
   "devDependencies": {
     "@graham42/prettier-config": "^1.3.2",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^24.0.11",
     "@types/node": "^11.10.5",
     "@types/yargs": "^12.0.9",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-jest": "^22.3.2",
     "husky": "^1.3.1",
+    "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
+    "microbundle": "^0.11.0",
     "prettier": "^1.16.4",
+    "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.3333"
   },
   "dependencies": {
+    "@types/execa": "^0.9.0",
+    "axios": "^0.18.0",
+    "execa": "^1.0.0",
+    "winston": "^3.2.1",
     "yargs": "^13.2.2"
   },
   "husky": {
