--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "target": "es2017",
+    "target": "es2018",
     "lib": ["esnext"],
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "allowJs": true,
+    "resolveJsonModule": true,
+    "declaration": false,
     // adds "use strict" to the top of files
     "alwaysStrict": true,
     "outDir": "./build"
   },
   "exclude": ["node_modules"],
-  "include": ["index.ts", "src/**/*.ts"]
+  "include": ["src/**/*"]
 }
