Match the name of the Action with the name of the project

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Deep Security Smart Check"
+name: "Deep Security Smart Check Scan Action"
 description: "Scan container images with Deep Security Smart Check."
 inputs:
   DSSC_IMAGE_NAME:
